@@ -60,12 +60,12 @@ public class DwpUploadResponseIt extends AbstractEventIt {
         assertEquals("001", result.getData().getBenefitCode());
         assertEquals("001US", result.getData().getCaseCode());
         assertEquals(2, result.getData().getSscsDocument().size());
-        assertEquals("sscs1", result.getData().getSscsDocument().get(1).getValue().getDocumentType());
-        assertEquals("appellantEvidence", result.getData().getSscsDocument().get(0).getValue().getDocumentType());
+        assertEquals("sscs1", result.getData().getSscsDocument().getFirst().getValue().getDocumentType());
+        assertEquals("appellantEvidence", result.getData().getSscsDocument().get(1).getValue().getDocumentType());
         assertNull(result.getData().getSscsDocument().get(1).getValue().getPartyUploaded());
         assertEquals(DwpState.RESPONSE_SUBMITTED_DWP, result.getData().getDwpState());
         assertEquals(1, result.getData().getAudioVideoEvidence().size());
-        assertNull(result.getData().getAudioVideoEvidence().get(0).getValue().getRip1Document());
+        assertNull(result.getData().getAudioVideoEvidence().getFirst().getValue().getRip1Document());
         assertEquals(REVIEW_BY_TCW, result.getData().getInterlocReviewState());
         assertEquals(REVIEW_AUDIO_VIDEO_EVIDENCE, result.getData().getInterlocReferralReason());
 
@@ -84,10 +84,10 @@ public class DwpUploadResponseIt extends AbstractEventIt {
         assertEquals("003", result.getData().getBenefitCode());
         assertEquals("003CC", result.getData().getCaseCode());
         assertEquals(2, result.getData().getSscsDocument().size());
-        assertEquals("sscs1", result.getData().getSscsDocument().get(1).getValue().getDocumentType());
-        assertEquals("appellantEvidence", result.getData().getSscsDocument().get(0).getValue().getDocumentType());
+        assertEquals("sscs1", result.getData().getSscsDocument().getFirst().getValue().getDocumentType());
+        assertEquals("appellantEvidence", result.getData().getSscsDocument().get(1).getValue().getDocumentType());
         assertEquals(1, result.getData().getAudioVideoEvidence().size());
-        assertNull(result.getData().getAudioVideoEvidence().get(0).getValue().getRip1Document());
+        assertNull(result.getData().getAudioVideoEvidence().getFirst().getValue().getRip1Document());
         assertEquals(REVIEW_BY_TCW, result.getData().getInterlocReviewState());
         assertEquals(REVIEW_AUDIO_VIDEO_EVIDENCE, result.getData().getInterlocReferralReason());
     }
